--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,1 +1,6 @@
-{{ question }}
+{{ question.question_text }}
+<ul>
+    {% for choice in question.choice_set.all %}
+        <li>{{ choice.choice_text }}</li>
+    {% endfor %}
+</ul>
